--- a/emacs.org
+++ b/emacs.org
@@ -862,6 +862,10 @@
 #+BEGIN_SRC emacs-lisp
 (use-package ldap-mode :ensure nil)
 #+END_SRC
+**** Json mode
+#+BEGIN_SRC emacs-lisp
+(use-package json-mode :defer t)
+#+END_SRC
 
 ** Verson Control
 *** magit
