--- a/emacs.org
+++ b/emacs.org
@@ -350,8 +350,10 @@
          (hydra-python/body))
         (( string= "emacs-lisp-mode" major-mode)
          (hydra-emacs-lisp/body))
-         (( string= "scala-mode" major-mode)
+        (( string= "scala-mode" major-mode)
          (hydra-scala/body))
+        (( string= "rust-mode" major-mode)
+         (hydra-rust/body))
         (t (message "Argh...hydra for your current mode does not exist :("))))
 
 ;; Needed for helm-find-files-1
@@ -783,6 +785,28 @@
                   comment-end   "")))
 #+end_src
 
+**** Rust
+#+BEGIN_SRC emacs-lisp
+;; to install rust lsp:
+;; rustup update && rustup component add rls rust-analysis rust-src
+
+(use-package toml-mode)
+
+(use-package rust-mode
+  :hook (rust-mode . lsp))
+
+;; Add keybindings for interacting with Cargo
+(use-package cargo
+  :hook (rust-mode . cargo-minor-mode))
+
+(use-package flycheck-rust
+  :config (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
+
+  ;; todo: move inside use-package rust
+(defhydra hydra-rust (:color blue)
+    ( "c" helm-yas-complete "yas complete")
+    ( "r" cargo-process-run "cargo run"))
+#+END_SRC
 **** Python
 #+BEGIN_SRC emacs-lisp
 (add-hook 'python-mode-hook
@@ -989,6 +1013,7 @@
         ("\\.h\\'" . c++-mode)
         ("\\.hh\\'" . c++-mode)
         ("\\.hpp\\'" . c++-mode)
+        ("\\.rs\\'" . rust-mode)
         ;; ("\\.hs$" . haskell-mode)
         ("\\.java\\'" . java-mode)
         ("\\.mc\\'" . c++-mode)
