--- a/emacs.org
+++ b/emacs.org
@@ -1158,13 +1158,14 @@ eyebrowse               frame management
 ------------------------------------------
 [_M-j_] <-              [_M-m_]ake frame
 [_M-k_] ->              [_M-o_]ther frame
-[_M-r_]ename            [_M-d_]elete frame
-[_M-c_]reate
+[_M-r_]ename            [_M-SPC_]other frame
+[_M-c_]reate            [_M-d_]elete frame
 [_M-C_]lose current
 %s(eyebrowse-mode-line-indicator)^^
 "
   ("M-m" make-frame nil)
   ("M-o" other-frame nil)
+  ("M-SPC" other-frame nil)
   ("M-d" delete-frame nil)
   ("M-j" eyebrowse-prev-window-config nil)
   ("M-k" eyebrowse-next-window-config nil)
