--- a/emacs.org
+++ b/emacs.org
@@ -9,7 +9,7 @@
 (add-to-list 'load-path "~/.emacs.d/custom-packages")
 
 (require 'package)
-(setq package-archives '(("gnu" . "http://elpa.gnu.org/packages/")
+(setq package-archives '(("gnu" . "https://elpa.gnu.org/packages/")
                          ("org" . "https://orgmode.org/elpa/")
                          ("melpa" . "http://melpa.milkbox.net/packages/")))
 
