--- a/emacs.org
+++ b/emacs.org
@@ -60,10 +60,18 @@
    ((string= mode "4k") (set-frame-font "Consolas-12"))))
 
 (defun set-linux-font (mode)
+
+(cond
+((member "Fira Code" (font-family-list))
   (cond
-   ((string= mode "normal") (set-frame-font "Monospace-10"))
-   ((string= mode "medium") (set-frame-font "Monospace-12"))
-   ((string= mode "4k") (set-frame-font "Monospace-16"))))
+   ((string= mode "normal") (set-frame-font "Firacode-10"))
+   ((string= mode "medium") (set-frame-font "Firacode-12"))
+   ((string= mode "4k") (set-frame-font "Firacode-16"))))
+(t (cond
+    ((string= mode "normal") (set-frame-font "Monospace-10"))
+    ((string= mode "medium") (set-frame-font "Monospace-12"))
+    ((string= mode "4k") (set-frame-font "Monospace-16"))))))
+
 
 (defun set-font (mode)
   (progn
