updating gdb hydra

--- a/emacs.org
+++ b/emacs.org
@@ -739,11 +739,25 @@
 #+end_src
 *** gdb
 #+BEGIN_SRC emacs-lisp
-(define-key tab-map (kbd "h") 'hydra-gdb-helper/body)
+(define-key tab-map (kbd "k") 'hydra-gdb-helper/body)
 
-(defhydra hydra-gdb-helper (:color blue)
-  ( "h" gdb-restore-windows "restore gdb windows")
-  ( "m" gdb-many-windows "many windows"))
+(defhydra hydra-gdb-helper (:color red)
+
+"
+_h_  restore-windows  |  _j_  next       _b_  set break
+_m_  many-windows     |  _k_  step       _r_  remove break
+                    |  _l_  up
+                    |  _c_  cont
+"
+  ( "h" gdb-restore-windows nil)
+  ( "m" gdb-many-windows nil)
+  ( "j" gud-next nil)
+  ( "k" gud-step nil)
+  ( "l" gud-up nil)
+  ( "b" gud-break nil)
+  ( "r" gud-remove nil)
+  ( "c" gud-cont nil))
+
 #+end_src
 *** semantic
 #+BEGIN_SRC emacs-lisp
