--- a/emacs.org
+++ b/emacs.org
@@ -741,10 +741,10 @@
 #+BEGIN_SRC emacs-lisp
 (define-key tab-map (kbd "k") 'hydra-gdb-helper/body)
 
-(defhydra hydra-gdb-helper (:color red)
+(defhydra hydra-gdb-helper (:color blue)
 
 "
-_h_  restore-windows  |  _j_  next       _b_  set break
+_h_  restore-windows  |  _j_  next       _b_  set break     _p_ print 
 _m_  many-windows     |  _k_  step       _r_  remove break
                     |  _l_  up
                     |  _c_  cont
@@ -756,7 +756,8 @@ _m_  many-windows     |  _k_  step       _r_  remove break
   ( "l" gud-up nil)
   ( "b" gud-break nil)
   ( "r" gud-remove nil)
-  ( "c" gud-cont nil))
+  ( "c" gud-cont nil)
+  ( "p" gud-print nil))
 
 #+end_src
 *** semantic
